deployment/rds.tf
resource "aws_db_instance" "default" {
  allocated_storage    = 20
  storage_type         = "gp2"
  engine               = "mysql"
  engine_version       = "5.7"
  instance_class       = "db.t2.micro"
  name                 = "mydb"
  username             = "beachify"
  password             = "foobarbaz"
  parameter_group_name = "default.mysql5.7"
}


output  "rds_adddress" {
	value = "${aws_db_instance.default.address}"

}
